[package]
name = "playbot_ng"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[lib]
name = "playbot"

[patch.crates-io]
# reqwest 0.9.5 does not have the rustls-tls feature yet
reqwest = { git = "https://github.com/seanmonstar/reqwest", rev = "c498567" }

[dependencies]
failure = "0.1.2"
reqwest = { version = "0.9.5", features = ["rustls-tls"], default-features = false }
url = "1.7.1"
itertools = "0.7.8"
regex = "1.0.5"
lazy_static = "1.1.0"
playground = { path = "playground" }
cratesio = { path = "cratesio" }

[dependencies.syn]
version = "0.15.12"
features = ["full", "parsing"]
default-features = false

[workspace]
members = [
    "playbot_irc",
    "reval",
]
