[package]
name = "playbot_ng"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[lib]
name = "playbot"

[dependencies]
failure = "0.1.2"
reqwest = { version = "0.9.6", features = ["rustls-tls"], default-features = false }
url = "1.7.1"
itertools = "0.8"
regex = "1.0.5"
lazy_static = "1.1.0"
playground = { path = "playground" }
cratesio = { path = "cratesio" }
actix = "0.8.2"
serde = "1.0.92"
serde_derive = "1.0.92"
shared_str = "0.1.0"
rand = "0.6.5"
slog = "2.4.1"

[dependencies.syn]
version = "0.15.12"
features = ["full", "parsing"]
default-features = false

[workspace]
members = [
    "playbot_irc",
    "reval",
]
