[package]
name = "playbot_ng"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[lib]
name = "playbot"

[dependencies]
failure = "0.1"
reqwest = { version = "0.10", features = ["rustls-tls"], default-features = false }
url = "2.1"
itertools = "0.9"
regex = "1.3"
lazy_static = "1.4"
playground = { path = "playground" }
cratesio = { path = "cratesio" }
actix = "0.10.0-alpha.3"
serde = "1.0"
serde_derive = "1.0"
shared_str = "0.1"
rand = "0.7"
slog = "2.5"
percent-encoding = "2.1"
futures = "0.3"

[dependencies.syn]
version = "0.15.12"
features = ["full", "parsing"]
default-features = false

[workspace]
members = [
    "playbot_irc",
    "reval",
]
