cargo-features = ["edition"]

[package]
name = "cratesio"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.8.8", features = ["unstable"] }
url = "1.7.1"
serde = "1.0.75"
serde_derive = "1.0.75"
tokio-core = "0.1.17"
tokio-async-await = "0.1.1"
