cargo-features = ["edition"]

[package]
name = "cratesio"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.9.0-pre", git = "https://github.com/seanmonstar/reqwest", rev = "c328315" }
url = "1.7.1"
serde = "1.0.75"
serde_derive = "1.0.75"
futures-preview = { version = "0.3.0-alpha.5", features = ["tokio-compat"] }
