[package]
name = "cratesio"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls", "json"], default-features = false }
url = "2.1"
serde = "1.0"
serde_derive = "1.0"
futures = "0.3"
percent-encoding = "2.1"
