[package]
name = "playbot_irc"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
playbot_ng = { path = ".." }
irc = { version = "0.13.5", git = "https://github.com/aatxe/irc", branch = "0.14" }
chrono = "0.4.6"
failure = "0.1.2"
toml = "0.4.8"
serde = "1.0.80"
serde_derive = "1.0.80"
futures = "0.1.25"
