[package]
name = "playbot_irc"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
playbot_ng = { path = ".." }
tokio = { version = "0.2.21", features = ["full"] }
futures = "0.3"
irc = { version = "0.14", features = ["ctcp", "tls-rust", "toml_config"], default-features = false }
chrono = "0.4"
failure = "0.1"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
shared_str = "0.1"
slog = "2.5"
slog-term = "2.6"
git-version = "0.3"
