cargo-features = ["edition"]

[package]
name = "reval"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

[dependencies]
playbot_ng = { path = ".." }
failure = "0.1.2"
tokio-core = "0.1.17"
futures-preview = { version = "0.3.0-alpha.3", features = ["tokio-compat"] }
